--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <link rel='stylesheet' href='app.pcss'>
     </head>
     <body>
-        <div id="demo"></div>
+        <div id="app"></div>
         <script src="main.js"></script>
     </body>
 </html>
