--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Minecraft Packet Debugger</title><link rel="stylesheet" href="/app.22ac685f.css"></head><body> <div id="demo"></div> <script src="/main.a8de76b0.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Minecraft Packet Debugger</title>
+        <link rel="stylesheet" href="/app.f38b4bcd.css">
+    <script src="/app.f38b4bcd.js"></script><link rel="stylesheet" href="/main.1f19ae8e.css"></head>
+    <body>
+        <div id="app"></div>
+        <script src="/main.1f19ae8e.js"></script>
+    </body>
+</html>
