Add production build

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Minecraft Packet Debugger</title>
-        <link rel="stylesheet" href="/app.f38b4bcd.css">
-    <script src="/app.f38b4bcd.js"></script><link rel="stylesheet" href="/main.1f19ae8e.css"></head>
-    <body>
-        <div id="app"></div>
-        <script src="/main.1f19ae8e.js"></script>
-    </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Minecraft Packet Debugger</title><link rel="stylesheet" href="/app.ba16827b.css"><link rel="stylesheet" href="/main.fb2e42c8.css"></head><body> <div id="app"></div> <script src="/main.6e398d8b.js"></script> </body></html>
