--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Minecraft Packet Debugger</title>
         <link rel="stylesheet" href="/app.f38b4bcd.css">
-    <script src="/app.f38b4bcd.js"></script><link rel="stylesheet" href="/main.1f19ae8e.css"></head>
+    <script src="/app.f38b4bcd.js"></script></head>
     <body>
         <div id="app"></div>
         <script src="/main.1f19ae8e.js"></script>
